# Julia

./: .gitignore  FUTURE_DEVELOPMENT.md  NLP_INTERFACE_ENHANCEMENTS.md  README.md  api_design.md  data_manager.py  database_schema.md  datasets_py.py  enhanced_nlp_commands.txt  genetic_evaluator.py  genotype_handler.py  gwas_module.py  mating_planner.py  mcmc_engine.py  model_components.py  nlp_interface_designer.py  output_utils_py.py  pedigree_module.py  readme.md  relationship_coefficient.jl  relationship_coefficient.py  requirements.txt  test_datasets_py.py  test_genotype_handler.py  test_gwas_module.py  test_mcmc_engine.py  test_model_components.py  test_output_utils_py.py  test_pedigree_module.py  ui_conceptualization.md
animal_breeding_genetics/: blup_animal_model.py  blup_multivariate.py  blup_other_models.py  genetic_params.py  matrix_ops.py  relationship_matrix.py  selection_index.py
backend/: app.py
docs/: api_reference.rst  conf.py  index.rst  installation.rst  tutorial_gblup.rst
documentation/: wechat_miniprogram_user_guide_outline.md
examples/: basic_breeding_program_simulation.py
pyjwas/: LICENSE  README.md  pyproject.toml  requirements-dev.txt
pyjwas/pyjwas/: __init__.py  data.py  mcmc.py  model.py  parser.py  results.py
pyjwas/pyjwas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyjwas/pyjwas/core/: components.py  distributions.py  model_builder.py  utils.py
pyjwas/pyjwas/io/: genotypes.py
pyjwas/tests/: test_data.py  test_mcmc_gblup.py  test_model_parser.py
pyjwas/tests/data/: test_genotypes.csv  test_phenotypes.csv
src/: main.py
(+110 files in other folders)
