[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjwas"
version = "0.0.1"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "Python translation of JWAS.jl for whole-genome analysis."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
]

[project.urls]
"Homepage" = "https://github.com/example/pyjwas" # Replace with actual URL later
"Bug Tracker" = "https://github.com/example/pyjwas/issues" # Replace with actual URL later
